5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1596_2895.log
== TEST (2019-04-02 15:50:14) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos:"))
valor_unit=float(input("digite o valor unitario":))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor unit)+valor_frete
print(total)
-- ERROR:
File "XXXX", line 2
    valor_unit=float(input("digite o valor unitario":))
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:50:29) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos:"))
valor_unit=float(input("digite o valor unitario:"))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor unit)+valor_frete
print(total)
-- ERROR:
File "XXXX", line 4
    total=(qtd_de_jogos*valor unit)+valor_frete
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:50:41) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos:"))
valor_unit=float(input("digite o valor unitario:"))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:50:44) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos:"))
valor_unit=float(input("digite o valor unitario:"))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)
-- EXECUTION TIME:
0.221112
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
